Add configurable CORS allow all origins support
- Update CorsConfig.java with toggle for all origins vs specific origins
- Add CORS_ALLOW_ALL_ORIGINS environment variable support
- Update WebConfig.java with consistent CORS logic
- Add cors.allow-all-origins property to application configs
- Set local development to allow all origins by default
- Keep production configs secure with specific origins
- Create comprehensive CORS configuration documentation
- Support both development flexibility and production security